[project]
name = "comfyui-animateanyone-reproduction"
description = "A ComfyUI custom node that simply integrates the [a/animate-anyone-reproduction](https://github.com/bendanzzc/AnimateAnyone-reproduction) functionality."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "diffusers==0.25", "numpy", "transformers", "opencv-python", "accelerate"]

[project.urls]
Repository = "https://github.com/AuroBit/ComfyUI-AnimateAnyone-reproduction"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AnimateAnyone-reproduction"
Icon = ""
